--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.0.1"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
